# TaskPilot

./: .gitignore  README.md  bun.lockb  index.html  package-lock.json  package.json  tailwind.config.js
src/: App.tsx  main.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs
src/components/backend/: Card.tsx  Column.tsx  DragDropSystem.tsx  Sidebar.tsx  TrelloImport.tsx  VoiceIntegration.tsx
src/components/pages/: Auth.tsx  Board.tsx  BoardLIST.tsx  Settings.tsx
